# napari-itk-io

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
.napari/: config.yml
napari_itk_io/: __init__.py  _reader.py  _writer.py  napari.yaml
napari_itk_io/_tests/: test_reader.py  test_writer.py
src/napari_itk_io/: __init__.py  _reader.py  _writer.py  napari.yaml
src/napari_itk_io/_tests/: test_reader.py  test_writer.py
