[metadata]
name = napari-itk-io
author = Matt McCormick
author_email = matt.mccormick@kitware.com
url = https://github.com/InsightSoftwareConsortium/napari-itk-io
license = Apache-2.0
description = File IO with itk for napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License


[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy
    napari-plugin-engine>=0.2.0
    itk-io>=5.2.0
    itk-napari-conversion

[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.entry_points] 
napari.manifest = 
    napari-itk-io = napari_itk_io:napari.yaml
